helloindia-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloindia
spec:
  replicas: 3
  selector:
    matchLabels:
      app: helloindia
  template:
    metadata:
      labels:
        app: helloindia
    spec:
      containers:
        - name: helloindia
          image: spatnaik77/helloindia
          resources:
            requests:
              cpu: 200m
              memory: 1024Mi
            limits:
              cpu: 500m
              memory: 2048Mi
          ports:
          - containerPort: 8080
          
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
